<resources>
    <string name="app_name">HW06</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notRegister">Not registered?</string>
    <string name="signup">SignUp</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password_8">Password (min 8 characters)</string>
    <string name="register">Register</string>
    <string name="your_courses">Your Courses</string>
    <string name="title">Title</string>
    <string name="instructor">Instructor</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="email">Email</string>
    <string name="personalWebsite">Personal Website</string>
    <string name="your_instructors">Your Instructors</string>
    <string name="titleCourse">Title</string>
    <string name="chooseInstructor">Choose instructor</string>
    <string name="schedule">Schedule</string>
    <string name="creditHours">Credit Hours</string>
    <string name="create">Create</string>
    <string name="courseUser" />

    <string-array name="days_array">
        <item>Select</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="time_period_array">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="semester_array">
        <item>Select semester</item>
        <item>Fall</item>
        <item>Spring</item>
        <item>Summer</item>
    </string-array>

</resources>
