<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mad.com.hw06.Register">

    <ImageView
        android:id="@+id/imageViewCamera"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/add_photo" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:width="300dp"
        android:inputType="textPersonName"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:width="300dp"
        android:inputType="textPersonName"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:width="300dp"
        android:inputType="textPersonName"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:width="300dp"
        android:inputType="textPassword"
        android:hint="@string/password_8"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>
