<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="5dp"
    android:background="@drawable/shape"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewInstructor"
        android:layout_width="20dp"
        android:layout_height="58dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/default_image" />

    <LinearLayout
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title" />

        <TextView
            android:id="@+id/textViewInstructor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/instructor" />


        <TextView
            android:id="@+id/textViewDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/day" />


    </LinearLayout>

</LinearLayout>