<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mad.com.hw06.AddCourseFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/titleCourse"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/addCourseTitle"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/chooseInstructor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addCourseTitle" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/addCourseRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"></android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/schedule"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addCourseRecyclerView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="12dp"
            android:text="@string/day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="36dp"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/creditHours"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addCourseTimeInHours" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:text="Semester"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupCreditHours" />

        <RadioGroup
            android:id="@+id/radioGroupCreditHours"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="28dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/addCourseTimeSpinner">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="3" />
        </RadioGroup>

        <Spinner
            android:id="@+id/addCourseDay"
            android:layout_width="231dp"
            android:layout_height="28dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="16dp"
            android:entries="@array/days_array"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/addCourseTimeInHours"
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/addCourseDay" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="4dp"
            android:layout_marginTop="28dp"
            android:text=":"
            app:layout_constraintStart_toEndOf="@+id/addCourseTimeInHours"
            app:layout_constraintTop_toBottomOf="@+id/addCourseDay" />

        <EditText
            android:id="@+id/addCourseTimeInMinutes"
            android:layout_width="53dp"
            android:layout_height="45dp"

            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/addCourseTimeInHours"
            app:layout_constraintTop_toBottomOf="@+id/addCourseDay" />

        <Spinner
            android:id="@+id/addCourseSemester"
            android:layout_width="231dp"
            android:entries="@array/semester_array"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupCreditHours" />

        <Button
            android:id="@+id/addCourseButtonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="28dp"
            android:text="@string/reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addCourseSemester" />

        <Button
            android:id="@+id/addCourseCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="28dp"
            android:text="@string/create"
            app:layout_constraintStart_toEndOf="@+id/addCourseButtonReset"
            app:layout_constraintTop_toBottomOf="@+id/addCourseSemester" />

        <Spinner
            android:id="@+id/addCourseTimeSpinner"
            android:layout_width="107dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:entries="@array/time_period_array"
            app:layout_constraintStart_toEndOf="@+id/addCourseTimeInMinutes"
            app:layout_constraintTop_toBottomOf="@+id/addCourseDay" />

        <TextView
            android:id="@+id/textViewNoInstructor"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="12dp"
            android:visibility="gone"
            android:text="You haven’t added any instructor yet, please add at least one
instructor to continue."
            app:layout_constraintStart_toStartOf="@+id/addCourseRecyclerView"
            app:layout_constraintTop_toTopOf="@+id/addCourseRecyclerView" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
